compiler/testData/diagnostics/tests/regressions/OrphanStarProjection.kt
class B {}

val b : B<!WRONG_NUMBER_OF_TYPE_ARGUMENTS_FOR_CLASS!><*><!> = 1
